use URI to build URL to servlet; print full URL in failure message